fix: add overflow:hidden to avoid scroll bar to show up when click record

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,6 +8,10 @@
 @import "components/settings";
 @import "components/index";
 
+html {
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
 .bg-dark-mode a {
   @extend .text-light;
   &:hover {
